--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "gen": "turbo generate",
     "build": "turbo run build",
     "dev": "turbo dev",
+    "ui-add": "turbo run ui-add",
     "clean": "git clean -xdf node_modules",
     "clean:workspaces": "turbo run clean",
     "format": "turbo run format --continue -- --cache --cache-location .cache/.prettiercache",
     "format:fix": "turbo run format --continue -- --write --cache --cache-location .cache/.prettiercache",
     "lint": "turbo run lint --continue -- --cache --cache-location .cache/.eslintcache",
     "lint:fix": "turbo run lint --continue -- --fix --cache --cache-location .cache/.eslintcache",
-    "typecheck": "turbo run typecheck",
-    "ui-add": "turbo run ui-add"
+    "typecheck": "turbo run typecheck"
   },
   "devDependencies": {
     "@yuki/prettier-config": "workspace:*",
