--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,8 +1,7 @@
 {
   "name": "@yuki/ui",
-  "private": true,
   "version": "0.1.0",
-  "license": "MIT",
+  "private": true,
   "type": "module",
   "exports": {
     ".": {
@@ -19,27 +18,32 @@
     "./tailwind.css": "./styles/tailwind.css"
   },
   "scripts": {
-    "dev": "tsc",
     "build": "tsc",
+    "dev": "tsc -w",
+    "ui-add": "bunx --bun shadcn@latest add && prettier src --write --list-different",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
     "typecheck": "tsc --noEmit --emitDeclarationOnly false"
   },
-  "devDependencies": {
-    "@yuki/prettier-config": "workspace:*",
-    "@yuki/eslint-config": "workspace:*",
-    "@yuki/tsconfig": "workspace:*",
-    "typescript": "latest",
-    "prettier": "latest",
-    "eslint": "latest"
-  },
-  "prettier": "@yuki/prettier-config",
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "geist": "^1.3.1",
     "lucide-react": "^0.441.0",
     "next-themes": "^0.3.0",
     "tailwind-merge": "^2.5.2"
-  }
+  },
+  "devDependencies": {
+    "@yuki/eslint-config": "workspace:*",
+    "@yuki/prettier-config": "workspace:*",
+    "@yuki/tsconfig": "workspace:*",
+    "@types/react": "^18.3.6",
+    "react": "^18.3.1",
+    "eslint": "latest",
+    "prettier": "latest",
+    "typescript": "latest"
+  },
+  "prettier": "@yuki/prettier-config"
 }
