--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "turbo-repo",
+  "name": "create-yuki-repo",
   "version": "0.6.9",
   "devDependencies": {
     "@yuki/prettier-config": "workspace:*",
