feat: update project name and installation command
- Changed project name from `create-yuki-repo` to `create-yuki-turbo`
- Updated installation command in README.md to use the new repository URL

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "create-yuki-repo",
+  "name": "create-yuki-turbo",
   "version": "0.6.9",
   "devDependencies": {
     "@yuki/prettier-config": "workspace:*",
