feat(config): add @yuki/db package and db scripts
- Updated .env.example to include DATABASE_URL for local development
- Added @yuki/db to transpilePackages in next.config.js
- Added @yuki/db to dependencies in package.json
- Added db scripts (db:push, postinstall, db:studio) to package.json
- Updated turbo.json to include new db scripts

--- a/.env.example
+++ b/.env.example
@@ -11,8 +11,7 @@
 
 # Prisma
 # https://prisma.io/docs/reference/database-reference/connection-urls#env
-# https://cloud.mongodb.com
-DATABASE_URL=""
+DATABASE_URL="file:./dev.db"
 
 # OAuth (Discord)
 # https://arctic.js.org/providers/discord
