--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,8 +14,9 @@
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
-    "@t3-oss/env-nextjs": "^0.11.1",
     "@yuki/ui": "workspace:*",
+    "@yuki/db": "workspace:*",
+    "@t3-oss/env-nextjs": "^0.11.1",
     "next": "14.2.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
