--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "build": "turbo run build",
     "dev": "turbo dev",
     "ui-add": "turbo run ui-add",
+    "db:push": "turbo -F @yuki/db push",
+    "postinstall": "turbo -F @yuki/db gnr",
+    "db:studio": "turbo -F @yuki/db studio",
     "clean": "git clean -xdf node_modules",
     "clean:workspaces": "turbo run clean",
     "format": "turbo run format --continue -- --cache --cache-location .cache/.prettiercache",
