refactor(db): rename gnr script to db:generate
- Removed postinstall script from root package.json
- Renamed "gnr" script to "db:generate" in db/package.json
- Updated turbo.json to use "db:generate" instead of "gnr"
- Added "db:generate" as a dependency for "build" and "dev" tasks

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -9,9 +9,9 @@
   "scripts": {
     "dev": "tsc",
     "build": "tsc",
-    "gnr": "bun with-env prisma generate",
     "push": "bun with-env prisma db push",
     "studio": "bun with-env prisma studio",
+    "db:generate": "bun with-env prisma generate",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
     "format": "prisma format && prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
