--- a/turbo.json
+++ b/turbo.json
@@ -3,17 +3,20 @@
   "ui": "tui",
   "tasks": {
     "topo": { "dependsOn": ["^topo"] },
-    "build": { "dependsOn": ["^build"], "outputs": [".cache/tsbuildinfo.json", "dist/**"] },
-    "dev": { "cache": false, "persistent": false },
+    "build": {
+      "dependsOn": ["^build", "^db:generate"],
+      "outputs": [".cache/tsbuildinfo.json", "dist/**"]
+    },
+    "dev": { "dependsOn": ["^db:generate"], "cache": false, "persistent": false },
     "format": { "outputs": [".cache/.prettiercache"], "outputLogs": "new-only" },
     "lint": { "dependsOn": ["^topo", "^build"], "outputs": [".cache/.eslintcache"] },
     "typecheck": { "dependsOn": ["^topo", "^build"], "outputs": [".cache/tsbuildinfo.json"] },
     "clean": { "cache": false },
     "//#clean": { "cache": false },
     "ui-add": { "cache": false, "interactive": true },
-    "gnr": { "cache": false, "interactive": true },
     "push": { "cache": false, "interactive": true },
-    "studio": { "cache": false, "persistent": true }
+    "studio": { "cache": false, "interactive": true },
+    "db:generate": { "cache": false, "interactive": true }
   },
   "globalEnv": ["PORT"],
   "globalPassThroughEnv": [
