fix(turbo.json): remove interactive flag from commands
The interactive flag has been removed from the "push", "studio", and
"db:generate" commands in the turbo.json file. This change ensures
that these commands run non-interactively, which is necessary for
automated processes.

--- a/turbo.json
+++ b/turbo.json
@@ -14,9 +14,9 @@
     "clean": { "cache": false },
     "//#clean": { "cache": false },
     "ui-add": { "cache": false, "interactive": true },
-    "push": { "cache": false, "interactive": true },
-    "studio": { "cache": false, "interactive": true },
-    "db:generate": { "cache": false, "interactive": true }
+    "push": { "cache": false },
+    "studio": { "cache": false },
+    "db:generate": { "cache": false }
   },
   "globalEnv": ["PORT"],
   "globalPassThroughEnv": [
