feat(env): update env variables for PostgreSQL
- Replace DATABASE_URL with POSTGRES_PRISMA_URL and POSTGRES_URL_NON_POOLING
- Remove OAuth (Discord) and other unused env variables
- Update Prisma schema to use PostgreSQL provider
- Adjust ESLint config to ignore env.js files

--- a/.env.example
+++ b/.env.example
@@ -11,19 +11,6 @@
 
 # Prisma
 # https://prisma.io/docs/reference/database-reference/connection-urls#env
-DATABASE_URL="file:./dev.db"
-
-# OAuth (Discord)
-# https://arctic.js.org/providers/discord
-# https://discord.com/developers/applications
-DISCORD_CLIENT_ID=""
-DISCORD_CLIENT_SECRET=""
-
-# Resend
-# https://resend.io
-RESEND_KEY=""
-
-# UploadThing
-# https://uploadthing.com
-UPLOADTHING_APP_ID=""
-UPLOADTHING_SECRET=""
+# https://vercel.com/docs/storage/vercel-postgres/quickstart
+POSTGRES_PRISMA_URL=""
+POSTGRES_URL_NON_POOLING=""
