feat(db): update db:generate script and build task
- Updated the `db:generate` script to use `prisma generate` directly
  instead of `bun with-env prisma generate`.
- Modified the `build` task in `turbo.json` to depend on `db:generate`
  ensuring the database is generated before building.

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -11,7 +11,7 @@
     "build": "tsc",
     "push": "bun with-env prisma db push",
     "studio": "bun with-env prisma studio",
-    "db:generate": "bun with-env prisma generate",
+    "db:generate": "prisma generate",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
     "format": "prisma format && prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
