--- a/turbo.json
+++ b/turbo.json
@@ -3,7 +3,10 @@
   "ui": "tui",
   "tasks": {
     "topo": { "dependsOn": ["^topo"] },
-    "build": { "dependsOn": ["^build"], "outputs": [".cache/tsbuildinfo.json", "dist/**"] },
+    "build": {
+      "dependsOn": ["^build", "db:generate"],
+      "outputs": [".cache/tsbuildinfo.json", "dist/**"]
+    },
     "dev": { "cache": false, "persistent": false },
     "format": { "outputs": [".cache/.prettiercache"], "outputLogs": "new-only" },
     "lint": { "dependsOn": ["^topo", "^build"], "outputs": [".cache/.eslintcache"] },
