feat(auth): integrate Discord OAuth support
- Add Discord client ID and secret to .env.example
- Extend env.js with authEnv for OAuth configuration
- Update next.config.js to transpile @yuki/auth package
- Include @yuki/auth in package.json dependencies
- Update Prisma schema to include User and Session models

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,8 @@
 # https://vercel.com/docs/storage/vercel-postgres/quickstart
 POSTGRES_PRISMA_URL=""
 POSTGRES_URL_NON_POOLING=""
+
+# OAuth
+# https://arctic.js.org/providers/discord
+DISCORD_CLIENT_ID=""
+DISCORD_CLIENT_SECRET=""
