--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,13 +14,19 @@
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
-    "@yuki/ui": "workspace:*",
-    "@yuki/db": "workspace:*",
-    "@yuki/auth": "workspace:*",
     "@t3-oss/env-nextjs": "^0.11.1",
+    "@tanstack/react-query": "^5.51.23",
+    "@trpc/client": "^11.0.0-rc.477",
+    "@trpc/react-query": "^11.0.0-rc.477",
+    "@trpc/server": "^11.0.0-rc.477",
+    "@yuki/api": "workspace:*",
+    "@yuki/auth": "workspace:*",
+    "@yuki/db": "workspace:*",
+    "@yuki/ui": "workspace:*",
     "next": "14.2.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "superjson": "^2.2.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
