feat: update database URL and improve SEO settings
- Updated the database URL to use a local PostgreSQL server
- Improved SEO settings by modifying metadata and removing unused icons
- Updated image source URL in the main page component
- Added DATABASE_URL to the environment variables
- Removed unused image files from the public directory

--- a/turbo.json
+++ b/turbo.json
@@ -18,7 +18,7 @@
     "studio": { "cache": false },
     "db:generate": { "cache": false }
   },
-  "globalEnv": ["PORT"],
+  "globalEnv": ["DATABASE_URL", "DISCORD_CLIENT_ID", "DISCORD_CLIENT_SECRET", "PORT"],
   "globalPassThroughEnv": [
     "CI",
     "NODE_ENV",
