--- a/.env.example
+++ b/.env.example
@@ -11,11 +11,12 @@
 
 # Prisma
 # https://prisma.io/docs/reference/database-reference/connection-urls#env
-# https://vercel.com/docs/storage/vercel-postgres/quickstart
-POSTGRES_PRISMA_URL=""
-POSTGRES_URL_NON_POOLING=""
+# You can run a local PostgreSQL server using Docker:
+# docker run --name yuki-db -e POSTGRES_PASSWORD=secret -p 5432:5432 -d postgres
+DATABASE_URL="postgresql://postgres:secret@localhost:5432/yuki"
 
 # OAuth
 # https://arctic.js.org/providers/discord
+# https://discord.com/developers/applications
 DISCORD_CLIENT_ID=""
 DISCORD_CLIENT_SECRET=""
