--- a/package.json
+++ b/package.json
@@ -1,19 +1,8 @@
 {
   "name": "create-yuki-turbo",
   "version": "0.6.9",
-  "devDependencies": {
-    "@yuki/prettier-config": "workspace:*",
-    "@turbo/gen": "^2.1.2",
-    "turbo": "^2.1.2",
-    "prettier": "latest",
-    "eslint": "latest"
-  },
-  "engines": {
-    "node": ">=18"
-  },
-  "packageManager": "bun@1.1.27",
-  "prettier": "@yuki/prettier-config",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo dev",
@@ -28,10 +17,21 @@
     "lint:fix": "turbo run lint --continue -- --fix --cache --cache-location .cache/.eslintcache",
     "typecheck": "turbo run typecheck"
   },
-  "type": "module",
+  "devDependencies": {
+    "@yuki/prettier-config": "workspace:*",
+    "@turbo/gen": "^2.1.2",
+    "turbo": "^2.1.2",
+    "prettier": "latest",
+    "eslint": "latest"
+  },
+  "engines": {
+    "node": ">=20"
+  },
+  "packageManager": "bun@1.1.27",
   "workspaces": [
     "apps/*",
     "tooling/*",
     "packages/*"
-  ]
+  ],
+  "prettier": "@yuki/prettier-config"
 }
