--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,23 +15,23 @@
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.11.1",
-    "@tanstack/react-query": "^5.51.23",
-    "@trpc/client": "^11.0.0-rc.477",
-    "@trpc/react-query": "^11.0.0-rc.477",
-    "@trpc/server": "^11.0.0-rc.477",
+    "@tanstack/react-query": "^5.56.2",
+    "@trpc/client": "^11.0.0-rc.502",
+    "@trpc/react-query": "^11.0.0-rc.502",
+    "@trpc/server": "^11.0.0-rc.502",
     "@yuki/api": "workspace:*",
     "@yuki/auth": "workspace:*",
     "@yuki/db": "workspace:*",
     "@yuki/ui": "workspace:*",
-    "next": "14.2.11",
+    "next": "^14.2.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "superjson": "^2.2.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^20.16.5",
-    "@types/react": "^18.3.6",
+    "@types/node": "^22.5.5",
+    "@types/react": "^18.3.7",
     "@types/react-dom": "^18.3.0",
     "@yuki/eslint-config": "workspace:*",
     "@yuki/prettier-config": "workspace:*",
@@ -40,7 +40,7 @@
     "eslint": "latest",
     "postcss": "^8.4.47",
     "prettier": "latest",
-    "tailwindcss": "^3.4.11",
+    "tailwindcss": "^3.4.12",
     "typescript": "latest"
   },
   "prettier": "@yuki/prettier-config"
