--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,34 +14,35 @@
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
-    "@t3-oss/env-nextjs": "^0.11.1",
-    "@tanstack/react-query": "^5.56.2",
-    "@trpc/client": "^11.0.0-rc.502",
-    "@trpc/react-query": "^11.0.0-rc.502",
-    "@trpc/server": "^11.0.0-rc.502",
-    "@yuki/api": "workspace:*",
     "@yuki/auth": "workspace:*",
+    "@yuki/api": "workspace:*",
     "@yuki/db": "workspace:*",
     "@yuki/ui": "workspace:*",
-    "next": "^14.2.13",
-    "react": "^18.3.1",
+    "@trpc/react-query": "^11.0.0-rc.502",
+    "@tanstack/react-query": "^5.56.2",
+    "@trpc/client": "^11.0.0-rc.502",
+    "@trpc/server": "^11.0.0-rc.502",
+    "@t3-oss/env-nextjs": "^0.11.1",
     "react-dom": "^18.3.1",
     "superjson": "^2.2.1",
+    "next": "^14.2.13",
+    "react": "^18.3.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^22.5.5",
-    "@types/react": "^18.3.8",
-    "@types/react-dom": "^18.3.0",
-    "@yuki/eslint-config": "workspace:*",
+    "@yuki/tailwind-config": "workspace:*",
     "@yuki/prettier-config": "workspace:*",
+    "@yuki/eslint-config": "workspace:*",
     "@yuki/tsconfig": "workspace:*",
-    "dotenv-cli": "^7.4.2",
-    "eslint": "latest",
-    "postcss": "^8.4.47",
-    "prettier": "latest",
+    "@types/react-dom": "^18.3.0",
+    "@types/react": "^18.3.8",
+    "@types/node": "^22.5.5",
     "tailwindcss": "^3.4.12",
-    "typescript": "latest"
+    "dotenv-cli": "^7.4.2",
+    "postcss": "^8.4.47",
+    "typescript": "latest",
+    "prettier": "latest",
+    "eslint": "latest"
   },
   "prettier": "@yuki/prettier-config"
 }
