--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -27,23 +27,23 @@
     "typecheck": "tsc --noEmit --emitDeclarationOnly false"
   },
   "dependencies": {
-    "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "geist": "^1.3.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "lucide-react": "^0.441.0",
+    "tailwind-merge": "^2.5.2",
     "next-themes": "^0.3.0",
-    "tailwind-merge": "^2.5.2"
+    "geist": "^1.3.1",
+    "clsx": "^2.1.1"
   },
   "devDependencies": {
-    "@yuki/eslint-config": "workspace:*",
     "@yuki/prettier-config": "workspace:*",
+    "@yuki/eslint-config": "workspace:*",
     "@yuki/tsconfig": "workspace:*",
     "@types/react": "^18.3.6",
     "react": "^18.3.1",
-    "eslint": "latest",
+    "typescript": "latest",
     "prettier": "latest",
-    "typescript": "latest"
+    "eslint": "latest"
   },
   "prettier": "@yuki/prettier-config"
 }
