--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -27,13 +27,13 @@
     "typecheck": "tsc --noEmit --emitDeclarationOnly false"
   },
   "dependencies": {
-    "class-variance-authority": "^0.7.0",
     "@radix-ui/react-slot": "^1.1.0",
-    "lucide-react": "^0.441.0",
-    "tailwind-merge": "^2.5.2",
-    "next-themes": "^0.3.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "geist": "^1.3.1",
-    "clsx": "^2.1.1"
+    "lucide-react": "^0.445.0",
+    "next-themes": "^0.3.0",
+    "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
     "@yuki/prettier-config": "workspace:*",
