feat: update dependencies and add update script
- Updated @trpc/server to version ^11.0.0-rc.522 in api package
- Updated @types/react to version ^18.3.8 in auth and ui packages
- Updated typescript, prettier, and eslint to specific versions in ui package
- Added script to update all packages in the monorepo

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -39,11 +39,11 @@
     "@yuki/prettier-config": "workspace:*",
     "@yuki/eslint-config": "workspace:*",
     "@yuki/tsconfig": "workspace:*",
-    "@types/react": "^18.3.6",
+    "@types/react": "^18.3.8",
     "react": "^18.3.1",
-    "typescript": "latest",
-    "prettier": "latest",
-    "eslint": "latest"
+    "typescript": "^5.6.2",
+    "prettier": "^3.3.3",
+    "eslint": "^9.11.0"
   },
   "prettier": "@yuki/prettier-config"
 }
