--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@yuki/web",
-  "version": "0.6.9",
+  "name": "web",
+  "version": "0.1.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -14,35 +14,35 @@
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
-    "@yuki/auth": "workspace:*",
-    "@yuki/api": "workspace:*",
-    "@yuki/db": "workspace:*",
     "@yuki/ui": "workspace:*",
-    "@trpc/react-query": "^11.0.0-rc.566",
-    "@tanstack/react-query": "^5.59.3",
-    "@trpc/client": "^11.0.0-rc.566",
-    "@trpc/server": "^11.0.0-rc.566",
+    "@yuki/db": "workspace:*",
+    "@yuki/api": "workspace:*",
+    "@yuki/auth": "workspace:*",
+    "next": "15.0.0-rc.1",
     "@t3-oss/env-nextjs": "^0.11.1",
-    "react-dom": "^18.3.1",
+    "@tanstack/react-query": "^5.59.15",
+    "@trpc/client": "^11.0.0-rc.580",
+    "@trpc/react-query": "^11.0.0-rc.580",
+    "@trpc/server": "^11.0.0-rc.580",
+    "react": "19.0.0-rc-cd22717c-20241013",
+    "react-dom": "19.0.0-rc-cd22717c-20241013",
+    "server-only": "^0.0.1",
     "superjson": "^2.2.1",
-    "next": "^14.2.15",
-    "react": "^18.3.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@yuki/tailwind-config": "workspace:*",
-    "@yuki/prettier-config": "workspace:*",
-    "@yuki/eslint-config": "workspace:*",
-    "@yuki/tsconfig": "workspace:*",
-    "@types/react-dom": "^18.3.0",
+    "@types/node": "^20.16.12",
     "@types/react": "^18.3.11",
-    "@types/node": "^22.7.5",
-    "tailwindcss": "^3.4.13",
+    "@types/react-dom": "^18.3.1",
+    "@yuki/eslint-config": "workspace:*",
+    "@yuki/prettier-config": "workspace:*",
+    "@yuki/tailwind-config": "workspace:*",
+    "@yuki/tsconfig": "workspace:*",
     "dotenv-cli": "^7.4.2",
+    "eslint": "^9.12.0",
     "postcss": "^8.4.47",
-    "typescript": "latest",
-    "prettier": "latest",
-    "eslint": "latest"
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.6.3"
   },
   "prettier": "@yuki/prettier-config"
 }
