--- a/tooling/eslint/package.json
+++ b/tooling/eslint/package.json
@@ -15,13 +15,13 @@
   },
   "dependencies": {
     "@eslint/compat": "^1.2.0",
-    "@next/eslint-plugin-next": "^14.2.15",
+    "@next/eslint-plugin-next": "^15.0.0-rc.1",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.0",
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "rc",
     "eslint-plugin-turbo": "^2.1.3",
-    "typescript-eslint": "^8.8.1"
+    "typescript-eslint": "^8.9.0"
   },
   "devDependencies": {
     "@yuki/prettier-config": "workspace:*",
