--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "web",
-  "version": "0.1.0",
+  "name": "@yuki/web",
+  "version": "0.6.9",
   "private": true,
   "type": "module",
   "scripts": {
@@ -31,14 +31,14 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^20.16.12",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.1",
+    "@yuki/tsconfig": "workspace:*",
     "@yuki/eslint-config": "workspace:*",
     "@yuki/prettier-config": "workspace:*",
     "@yuki/tailwind-config": "workspace:*",
-    "@yuki/tsconfig": "workspace:*",
     "dotenv-cli": "^7.4.2",
+    "@types/node": "^20.16.12",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1",
     "eslint": "^9.12.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
