feat: downgrade next version
downgrade next to ver 14

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,28 +18,27 @@
     "@yuki/db": "workspace:*",
     "@yuki/api": "workspace:*",
     "@yuki/auth": "workspace:*",
-    "next": "15.0.0-rc.1",
     "@t3-oss/env-nextjs": "^0.11.1",
     "@tanstack/react-query": "^5.59.15",
-    "@trpc/client": "^11.0.0-rc.580",
-    "@trpc/react-query": "^11.0.0-rc.580",
-    "@trpc/server": "^11.0.0-rc.580",
-    "react": "19.0.0-rc-cd22717c-20241013",
-    "react-dom": "19.0.0-rc-cd22717c-20241013",
+    "@trpc/client": "^11.0.0-rc.586",
+    "@trpc/react-query": "^11.0.0-rc.586",
+    "@trpc/server": "^11.0.0-rc.586",
+    "next": "14.2.15",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@yuki/tsconfig": "workspace:*",
-    "@yuki/eslint-config": "workspace:*",
-    "@yuki/prettier-config": "workspace:*",
-    "@yuki/tailwind-config": "workspace:*",
-    "dotenv-cli": "^7.4.2",
     "@types/node": "^20.16.12",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
-    "eslint": "^9.12.0",
+    "@yuki/eslint-config": "workspace:*",
+    "@yuki/prettier-config": "workspace:*",
+    "@yuki/tailwind-config": "workspace:*",
+    "@yuki/tsconfig": "workspace:*",
+    "dotenv-cli": "^7.4.2",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
