--- a/tooling/eslint/package.json
+++ b/tooling/eslint/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@eslint/compat": "^1.2.1",
-    "@next/eslint-plugin-next": "^15.0.0-rc.1",
+    "@next/eslint-plugin-next": "^14.2.15",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.0",
     "eslint-plugin-react": "^7.37.1",
