feat: upate template

--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -4,9 +4,17 @@
   "private": true,
   "type": "module",
   "exports": {
-    ".": "./src/index.ts",
-    "./lucia": "./src/lucia.ts",
-    "./react": "./src/react.tsx",
+    ".": {
+      "types": "./dist/src/index.d.ts",
+      "default": "./src/index.ts"
+    },
+    "./*": {
+      "types": "./dist/src/*.d.ts",
+      "default": [
+        "./src/*.ts",
+        "./src/*.tsx"
+      ]
+    },
     "./env": "./env.js"
   },
   "scripts": {
