refactor(auth): simplify discord auth integration
- Removed redundant session check in Post component
- Replaced custom discord auth logic with @yuki/auth/oauth
- Updated package.json scripts and dependencies
- Adjusted Tailwind config content paths
- Ensured consistent prettier and eslint configurations

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -10,27 +10,27 @@
     }
   },
   "scripts": {
-    "dev": "tsc -w",
     "build": "tsc",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
+    "dev": "tsc -w",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
     "typecheck": "tsc --noEmit --emitDeclarationOnly false"
   },
+  "prettier": "@yuki/prettier-config",
   "dependencies": {
+    "@trpc/server": "^11.0.0-rc.593",
     "@yuki/auth": "workspace:*",
     "@yuki/db": "workspace:*",
-    "@trpc/server": "^11.0.0-rc.593",
-    "zod": "^3.23.8",
-    "superjson": "^2.2.1"
+    "superjson": "^2.2.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@yuki/prettier-config": "workspace:*",
     "@yuki/eslint-config": "workspace:*",
+    "@yuki/prettier-config": "workspace:*",
     "@yuki/tsconfig": "workspace:*",
-    "typescript": "latest",
+    "eslint": "latest",
     "prettier": "latest",
-    "eslint": "latest"
-  },
-  "prettier": "@yuki/prettier-config"
+    "typescript": "latest"
+  }
 }
