--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,34 +4,35 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "bun with-env next dev",
     "build": "bun with-env next build",
-    "start": "bun with-env next start",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
+    "dev": "bun with-env next dev",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
+    "start": "bun with-env next start",
     "typecheck": "tsc --noEmit",
     "with-env": "dotenv -e ../../.env --"
   },
+  "prettier": "@yuki/prettier-config",
   "dependencies": {
-    "@yuki/ui": "workspace:*",
-    "@yuki/db": "workspace:*",
-    "@yuki/api": "workspace:*",
-    "@yuki/auth": "workspace:*",
-    "next": "14.2.15",
     "@t3-oss/env-nextjs": "^0.11.1",
-    "@tanstack/react-query": "^5.59.15",
+    "@tanstack/react-query": "^5.59.16",
     "@trpc/client": "^11.0.0-rc.593",
     "@trpc/react-query": "^11.0.0-rc.593",
     "@trpc/server": "^11.0.0-rc.593",
+    "@yuki/api": "workspace:*",
+    "@yuki/auth": "workspace:*",
+    "@yuki/db": "workspace:*",
+    "@yuki/ui": "workspace:*",
+    "next": "14.2.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "superjson": "^2.2.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^22.7.8",
-    "@types/react": "^18.3.11",
+    "@types/node": "^22.7.9",
+    "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@yuki/eslint-config": "workspace:*",
     "@yuki/prettier-config": "workspace:*",
@@ -41,6 +42,5 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
-  },
-  "prettier": "@yuki/prettier-config"
+  }
 }
