--- a/package.json
+++ b/package.json
@@ -3,35 +3,36 @@
   "version": "0.6.9",
   "private": true,
   "type": "module",
-  "scripts": {
-    "build": "turbo run build",
-    "dev": "turbo dev",
-    "ui-add": "turbo run ui-add",
-    "db:push": "turbo -F @yuki/db push",
-    "db:studio": "turbo -F @yuki/db studio",
-    "clean": "git clean -xdf node_modules",
-    "clean:workspaces": "turbo run clean",
-    "format": "turbo run format --continue -- --cache --cache-location .cache/.prettiercache",
-    "format:fix": "turbo run format --continue -- --write --cache --cache-location .cache/.prettiercache",
-    "lint": "turbo run lint --continue -- --cache --cache-location .cache/.eslintcache",
-    "lint:fix": "turbo run lint --continue -- --fix --cache --cache-location .cache/.eslintcache",
-    "typecheck": "turbo run typecheck"
-  },
-  "devDependencies": {
-    "@yuki/prettier-config": "workspace:*",
-    "@turbo/gen": "^2.2.3",
-    "turbo": "^2.2.3",
-    "prettier": "latest",
-    "eslint": "latest"
-  },
-  "engines": {
-    "node": ">=20"
-  },
-  "packageManager": "bun@1.1.27",
   "workspaces": [
     "apps/*",
     "tooling/*",
     "packages/*"
   ],
-  "prettier": "@yuki/prettier-config"
+  "scripts": {
+    "build": "turbo run build",
+    "clean": "git clean -xdf node_modules",
+    "clean:workspaces": "turbo run clean",
+    "db:push": "turbo -F @yuki/db push",
+    "db:studio": "turbo -F @yuki/db studio",
+    "dev": "turbo dev",
+    "format": "turbo run format --continue -- --cache --cache-location .cache/.prettiercache",
+    "format:fix": "turbo run format --continue -- --write --cache --cache-location .cache/.prettiercache",
+    "postinstall": "turbo run db:generate",
+    "lint": "turbo run lint --continue -- --cache --cache-location .cache/.eslintcache",
+    "lint:fix": "turbo run lint --continue -- --fix --cache --cache-location .cache/.eslintcache",
+    "typecheck": "turbo run typecheck",
+    "ui-add": "turbo run ui-add"
+  },
+  "prettier": "@yuki/prettier-config",
+  "devDependencies": {
+    "@turbo/gen": "^2.2.3",
+    "@yuki/prettier-config": "workspace:*",
+    "eslint": "latest",
+    "prettier": "latest",
+    "turbo": "^2.2.3"
+  },
+  "packageManager": "bun@1.1.27",
+  "engines": {
+    "node": ">=20"
+  }
 }
