--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -7,29 +7,29 @@
     ".": "./src/index.ts"
   },
   "scripts": {
-    "dev": "tsc -w",
     "build": "tsc",
-    "push": "bun with-env prisma db push",
-    "studio": "bun with-env prisma studio",
-    "db:generate": "prisma generate",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
+    "db:generate": "prisma generate",
+    "dev": "tsc -w",
     "format": "prisma format && prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
+    "push": "bun with-env prisma db push",
+    "studio": "bun with-env prisma studio",
     "typecheck": "tsc --noEmit --emitDeclarationOnly false",
     "with-env": "dotenv -e ../../.env --"
   },
+  "prettier": "@yuki/prettier-config",
   "dependencies": {
     "@prisma/client": "^5.21.1"
   },
   "devDependencies": {
-    "@yuki/prettier-config": "workspace:*",
     "@yuki/eslint-config": "workspace:*",
+    "@yuki/prettier-config": "workspace:*",
     "@yuki/tsconfig": "workspace:*",
-    "prisma": "^5.21.1",
     "dotenv-cli": "^7.4.2",
-    "typescript": "latest",
+    "eslint": "latest",
     "prettier": "latest",
-    "eslint": "latest"
-  },
-  "prettier": "@yuki/prettier-config"
+    "prisma": "^5.21.1",
+    "typescript": "latest"
+  }
 }
