--- a/tooling/tailwind/package.json
+++ b/tooling/tailwind/package.json
@@ -12,18 +12,18 @@
     "lint": "eslint",
     "typecheck": "tsc --noEmit"
   },
+  "prettier": "@yuki/prettier-config",
   "dependencies": {
     "postcss": "latest",
     "tailwindcss": "latest",
     "tailwindcss-animate": "latest"
   },
   "devDependencies": {
-    "@yuki/tsconfig": "workspace:*",
     "@yuki/eslint-config": "workspace:*",
     "@yuki/prettier-config": "workspace:*",
-    "typescript": "latest",
+    "@yuki/tsconfig": "workspace:*",
+    "eslint": "latest",
     "prettier": "latest",
-    "eslint": "latest"
-  },
-  "prettier": "@yuki/prettier-config"
+    "typescript": "latest"
+  }
 }
