--- a/packages/auth/tsconfig.json
+++ b/packages/auth/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "lib": ["ES2022", "dom", "dom.iterable"],
     "jsx": "preserve",
+    "rootDir": ".",
     "baseUrl": ".",
     "module": "esnext"
   },
