--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@yuki/web",
-  "version": "0.6.9",
+  "version": "0.1.0",
   "private": true,
   "type": "module",
   "scripts": {
     "build": "bun with-env next build",
-    "clean": "git clean -xdf .cache .turbo dist node_modules",
+    "clean": "git clean -xdf .cache .next .turbo node_modules",
     "dev": "bun with-env next dev",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
@@ -13,25 +13,16 @@
     "typecheck": "tsc --noEmit",
     "with-env": "dotenv -e ../../.env --"
   },
-  "prettier": "@yuki/prettier-config",
   "dependencies": {
-    "@t3-oss/env-nextjs": "^0.11.1",
-    "@tanstack/react-query": "^5.59.16",
-    "@trpc/client": "^11.0.0-rc.593",
-    "@trpc/react-query": "^11.0.0-rc.593",
-    "@trpc/server": "^11.0.0-rc.593",
-    "@yuki/api": "workspace:*",
-    "@yuki/auth": "workspace:*",
-    "@yuki/db": "workspace:*",
     "@yuki/ui": "workspace:*",
-    "next": "14.2.15",
+    "@t3-oss/env-nextjs": "^0.11.1",
+    "next": "14.2.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "superjson": "^2.2.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^22.7.9",
+    "@types/node": "^20.17.6",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@yuki/eslint-config": "workspace:*",
@@ -39,8 +30,12 @@
     "@yuki/tailwind-config": "workspace:*",
     "@yuki/tsconfig": "workspace:*",
     "dotenv-cli": "^7.4.2",
+    "eslint": "^9.14.0",
+    "jiti": "^2.4.0",
     "postcss": "^8.4.47",
+    "prettier": "latest",
     "tailwindcss": "^3.4.14",
-    "typescript": "^5.6.3"
-  }
+    "typescript": "latest"
+  },
+  "prettier": "@yuki/prettier-config"
 }
