--- a/apps/web/turbo.json
+++ b/apps/web/turbo.json
@@ -6,6 +6,8 @@
       "dependsOn": ["^build"],
       "outputs": [".next/**", "!.next/cache/**", "next-env.d.ts"]
     },
-    "dev": { "persistent": true }
+    "dev": {
+      "persistent": true
+    }
   }
 }
