--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "create-yuki-turbo",
-  "version": "0.6.9",
   "private": true,
-  "type": "module",
   "workspaces": [
     "apps/*",
-    "tooling/*",
-    "packages/*"
+    "packages/*",
+    "tooling/*"
   ],
   "scripts": {
     "build": "turbo run build",
@@ -14,25 +12,24 @@
     "clean:workspaces": "turbo run clean",
     "db:push": "turbo -F @yuki/db push",
     "db:studio": "turbo -F @yuki/db studio",
-    "dev": "turbo dev",
+    "dev": "turbo watch dev --continue",
     "format": "turbo run format --continue -- --cache --cache-location .cache/.prettiercache",
     "format:fix": "turbo run format --continue -- --write --cache --cache-location .cache/.prettiercache",
-    "postinstall": "turbo run db:generate",
     "lint": "turbo run lint --continue -- --cache --cache-location .cache/.eslintcache",
-    "lint:fix": "turbo run lint --continue -- --fix --cache --cache-location .cache/.eslintcache",
     "typecheck": "turbo run typecheck",
     "ui-add": "turbo run ui-add"
   },
-  "prettier": "@yuki/prettier-config",
   "devDependencies": {
     "@turbo/gen": "^2.2.3",
     "@yuki/prettier-config": "workspace:*",
-    "eslint": "latest",
     "prettier": "latest",
-    "turbo": "^2.2.3"
+    "turbo": "^2.2.3",
+    "typescript": "latest"
   },
-  "packageManager": "bun@1.1.27",
+  "packageManager": "bun@1.1.34",
   "engines": {
-    "node": ">=20"
-  }
+    "node": ">=22.11.0",
+    "pnpm": "^1.1.34"
+  },
+  "prettier": "@yuki/prettier-config"
 }
