--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@yuki/ui",
-  "version": "0.6.9",
+  "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "type": "module",
   "exports": {
     ".": {
@@ -9,10 +10,10 @@
       "default": "./src/index.ts"
     },
     "./*": {
-      "types": "./dist/src/components/ui/*.d.ts",
+      "types": "./dist/src/ui/*.d.ts",
       "default": [
-        "./src/components/ui/*.ts",
-        "./src/components/ui/*.tsx"
+        "./src/ui/*.ts",
+        "./src/ui/*.tsx"
       ]
     },
     "./hooks/*": {
@@ -22,25 +23,25 @@
         "./src/hooks/*.tsx"
       ]
     },
-    "./tailwind.css": "./styles/tailwind.css"
+    "./tailwind.css": "./src/tailwind.css"
   },
   "scripts": {
     "build": "tsc",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
-    "dev": "tsc -w",
+    "dev": "tsc --watch",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
     "typecheck": "tsc --noEmit --emitDeclarationOnly false",
     "ui-add": "bunx --bun shadcn@latest add && prettier src --write --list-different"
   },
-  "prettier": "@yuki/prettier-config",
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "geist": "^1.3.1",
-    "lucide-react": "^0.453.0",
-    "next-themes": "^0.3.0",
+    "lucide-react": "^0.456.0",
+    "next": "14.2.17",
+    "next-themes": "^0.4.3",
     "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
@@ -48,9 +49,9 @@
     "@yuki/eslint-config": "workspace:*",
     "@yuki/prettier-config": "workspace:*",
     "@yuki/tsconfig": "workspace:*",
-    "eslint": "^9.13.0",
-    "prettier": "^3.3.3",
-    "react": "^18.3.1",
-    "typescript": "^5.6.3"
-  }
+    "eslint": "latest",
+    "prettier": "latest",
+    "typescript": "latest"
+  },
+  "prettier": "@yuki/prettier-config"
 }
