--- a/tooling/prettier/package.json
+++ b/tooling/prettier/package.json
@@ -7,18 +7,18 @@
     ".": "./index.js"
   },
   "scripts": {
-    "clean": "git clean -xdf .cache .turbo dist node_modules",
+    "clean": "git clean -xdf .cache .turbo node_modules",
     "format": "prettier --check . --ignore-path ../../.gitignore",
-    "typecheck": "tsc --noEmit --emitDeclarationOnly false"
+    "typecheck": "tsc --noEmit"
   },
-  "prettier": "@yuki/prettier-config",
   "dependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
-    "prettier": "^3.3.3",
+    "prettier": "latest",
     "prettier-plugin-tailwindcss": "^0.6.8"
   },
   "devDependencies": {
     "@yuki/tsconfig": "workspace:*",
     "typescript": "latest"
-  }
+  },
+  "prettier": "@yuki/prettier-config"
 }
