--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "clean:workspaces": "turbo run clean",
     "db:push": "turbo -F @yuki/db push",
     "db:studio": "turbo -F @yuki/db studio",
-    "dev": "turbo watch dev --continue",
+    "dev": "turbo dev",
     "format": "turbo run format --continue -- --cache --cache-location .cache/.prettiercache",
     "format:fix": "turbo run format --continue -- --write --cache --cache-location .cache/.prettiercache",
+    "postinstall": "turbo -F @yuki/db gnr",
     "lint": "turbo run lint --continue -- --cache --cache-location .cache/.eslintcache",
     "typecheck": "turbo run typecheck",
     "ui-add": "turbo run ui-add"
