--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,32 +1,35 @@
 {
-  "name": "@yuki/tailwind-config",
+  "name": "@yuki/db",
   "version": "0.1.0",
   "private": true,
   "license": "MIT",
   "type": "module",
   "exports": {
-    "./web": "./web.ts",
-    "./native": "./native.ts"
+    ".": "./src/index.ts"
   },
   "scripts": {
     "build": "tsc",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
     "dev": "tsc",
     "format": "prettier --check . --ignore-path ../../.gitignore",
+    "gnr": "bun with-env prisma generate",
     "lint": "eslint",
-    "typecheck": "tsc --noEmit --emitDeclarationOnly false"
+    "push": "bun with-env prisma db push",
+    "studio": "bun with-env prisma studio",
+    "typecheck": "tsc --noEmit --emitDeclarationOnly false",
+    "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14",
-    "tailwindcss-animate": "^1.0.7"
+    "@prisma/client": "^5.22.0"
   },
   "devDependencies": {
     "@yuki/eslint-config": "workspace:*",
     "@yuki/prettier-config": "workspace:*",
     "@yuki/tsconfig": "workspace:*",
+    "dotenv-cli": "^7.4.2",
     "eslint": "latest",
     "prettier": "latest",
+    "prisma": "^5.22.0",
     "typescript": "latest"
   },
   "prettier": "@yuki/prettier-config"
