--- a/turbo.json
+++ b/turbo.json
@@ -2,59 +2,20 @@
   "$schema": "https://turborepo.org/schema.json",
   "ui": "tui",
   "tasks": {
-    "topo": {
-      "dependsOn": ["^topo"]
-    },
-    "build": {
-      "dependsOn": ["^build"],
-      "outputs": [".cache/tsbuildinfo.json", "dist/**"]
-    },
-    "dev": {
-      "dependsOn": ["^dev"],
-      "cache": false,
-      "persistent": false
-    },
-    "format": {
-      "outputs": [".cache/.prettiercache"],
-      "outputLogs": "new-only"
-    },
-    "lint": {
-      "dependsOn": ["^topo", "^build"],
-      "outputs": [".cache/.eslintcache"]
-    },
-    "typecheck": {
-      "dependsOn": ["^topo", "^build"],
-      "outputs": [".cache/tsbuildinfo.json"]
-    },
-    "clean": {
-      "cache": false
-    },
-    "//#clean": {
-      "cache": false
-    },
-    "push": {
-      "cache": false,
-      "interactive": true
-    },
-    "studio": {
-      "cache": false,
-      "persistent": true
-    },
-    "generate": {
-      "cache": false,
-      "persistent": true
-    },
-    "ui-add": {
-      "cache": false,
-      "interactive": true
-    }
+    "topo": { "dependsOn": ["^topo"] },
+    "build": { "dependsOn": ["^build"], "outputs": [".cache/tsbuildinfo.json", "dist/**"] },
+    "dev": { "cache": false, "persistent": false },
+    "format": { "outputs": [".cache/.prettiercache"], "outputLogs": "new-only" },
+    "lint": { "dependsOn": ["^topo", "^build"], "outputs": [".cache/.eslintcache"] },
+    "typecheck": { "dependsOn": ["^topo", "^build"], "outputs": [".cache/tsbuildinfo.json"] },
+    "clean": { "cache": false },
+    "//#clean": { "cache": false },
+    "push": { "cache": false, "interactive": true },
+    "studio": { "cache": false, "persistent": true },
+    "gnr": { "cache": false, "persistent": true },
+    "ui-add": { "cache": false, "interactive": true }
   },
-  "globalEnv": [
-    "DATABASE_URL",
-    "DISCORD_CLIENT_ID",
-    "DISCORD_CLIENT_SECRET",
-    "PORT"
-  ],
+  "globalEnv": ["DATABASE_URL", "DISCORD_CLIENT_ID", "DISCORD_CLIENT_SECRET", "PORT"],
   "globalPassThroughEnv": [
     "NODE_ENV",
     "CI",
