--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -1,11 +1,21 @@
 {
-  "name": "@yuki/{{ name }}",
+  "name": "@yuki/auth",
   "version": "0.1.0",
   "private": true,
   "license": "MIT",
   "type": "module",
   "exports": {
-    ".": "./src/index.ts"
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./src/index.ts"
+    },
+    "./*": {
+      "types": "./dist/*.d.ts",
+      "default": [
+        "./src/*.ts",
+        "./src/*.tsx"
+      ]
+    }
   },
   "scripts": {
     "build": "tsc",
@@ -15,7 +25,14 @@
     "lint": "eslint",
     "typecheck": "tsc --noEmit --emitDeclarationOnly false"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@yuki/db": "workspace:*",
+    "@lucia-auth/adapter-prisma": "^4.0.1",
+    "@t3-oss/env-nextjs": "^0.11.1",
+    "arctic": "^2.2.2",
+    "lucia": "^3.2.2",
+    "zod": "^3.23.8"
+  },
   "devDependencies": {
     "@yuki/eslint-config": "workspace:*",
     "@yuki/prettier-config": "workspace:*",
