--- a/turbo.json
+++ b/turbo.json
@@ -3,7 +3,10 @@
   "ui": "tui",
   "tasks": {
     "topo": { "dependsOn": ["^topo"] },
-    "build": { "dependsOn": ["^build"], "outputs": [".cache/tsbuildinfo.json", "dist/**"] },
+    "build": {
+      "dependsOn": ["^db:generate", "^build"],
+      "outputs": [".cache/tsbuildinfo.json", "dist/**"]
+    },
     "dev": { "cache": false, "persistent": false },
     "format": { "outputs": [".cache/.prettiercache"], "outputLogs": "new-only" },
     "lint": { "dependsOn": ["^topo", "^build"], "outputs": [".cache/.eslintcache"] },
@@ -12,7 +15,7 @@
     "//#clean": { "cache": false },
     "push": { "cache": false, "interactive": true },
     "studio": { "cache": false, "persistent": true },
-    "gnr": { "cache": false, "persistent": true },
+    "db:generate": { "cache": false, "persistent": false },
     "ui-add": { "cache": false, "interactive": true }
   },
   "globalEnv": ["DATABASE_URL", "DISCORD_CLIENT_ID", "DISCORD_CLIENT_SECRET", "PORT"],
