feat(client): done

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "exports": {
     "./*": {
-      "types": "./dist/*.d.ts",
+      "types": "./dist/src/*.d.ts",
       "default": [
         "./src/*.ts",
         "./src/*.tsx"
