--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,12 +14,17 @@
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
-    "@yuki/ui": "workspace:*",
-    "@yuki/db": "workspace:*",
     "@t3-oss/env-nextjs": "^0.11.1",
+    "@tanstack/react-query": "^5.59.20",
+    "@trpc/react-query": "^11.0.0-rc.621",
+    "@yuki/api": "workspace:*",
+    "@yuki/auth": "workspace:*",
+    "@yuki/db": "workspace:*",
+    "@yuki/ui": "workspace:*",
     "next": "14.2.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "superjson": "^2.2.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
