--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "type": "module",
   "exports": {
-    ".": "./src/index.ts"
+    ".": "./src/index.ts",
+    "./env": "./src/env.ts"
   },
   "scripts": {
     "build": "tsc",
@@ -20,7 +21,11 @@
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
-    "@prisma/client": "^5.22.0"
+    "@neondatabase/serverless": "^0.10.3",
+    "@prisma/adapter-neon": "^5.22.0",
+    "@prisma/client": "^5.22.0",
+    "@t3-oss/env-nextjs": "^0.11.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@yuki/eslint-config": "workspace:*",
