feat: change something

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@
 # If you are cloning this repo, create a copy of this file named `.env` and populate it with your secrets.
 
 # The database URL is used to connect to your database.
+# @see https://neon.tech/docs/guides/prisma
 DATABASE_URL=''
 
 
