--- a/tooling/tailwind/tsconfig.json
+++ b/tooling/tailwind/tsconfig.json
@@ -1,5 +1,5 @@
 {
+  "exclude": ["node_modules"],
   "extends": "@yuki/tsconfig/base.json",
-  "include": ["."],
-  "exclude": ["node_modules"]
+  "include": ["."]
 }
