--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -1,8 +1,6 @@
 {
   "extends": "@yuki/tsconfig/internal-package.json",
-  "compilerOptions": {
-    "rootDir": "."
-  },
-  "include": ["*.ts", "src"],
+  "compilerOptions": { "rootDir": "." },
+  "include": ["src"],
   "exclude": ["node_modules"]
 }
