--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -6,16 +6,11 @@
   "type": "module",
   "exports": {
     ".": {
-      "types": "./dist/src/index.d.ts",
+      "react-server": "./src/index.rsc.ts",
       "default": "./src/index.ts"
     },
-    "./*": {
-      "types": "./dist/src/*.d.ts",
-      "default": [
-        "./src/*.ts",
-        "./src/*.tsx"
-      ]
-    }
+    "./oauth": "./src/oauth.ts",
+    "./env": "./env.ts"
   },
   "scripts": {
     "build": "tsc",
@@ -26,9 +21,9 @@
     "typecheck": "tsc --noEmit --emitDeclarationOnly false"
   },
   "dependencies": {
-    "@yuki/db": "workspace:*",
     "@lucia-auth/adapter-prisma": "^4.0.1",
     "@t3-oss/env-nextjs": "^0.11.1",
+    "@yuki/db": "workspace:*",
     "arctic": "^2.3.0",
     "lucia": "^3.2.2",
     "next": "14.2.18",
