--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -5,8 +5,11 @@
   "license": "MIT",
   "type": "module",
   "exports": {
-    ".": "./src/index.ts",
-    "./env": "./src/env.ts"
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./src/index.ts"
+    },
+    "./env": "./env.ts"
   },
   "scripts": {
     "build": "tsc",
@@ -21,7 +24,9 @@
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
-    "@prisma/client": "^5.22.0",
+    "@neondatabase/serverless": "^0.10.4",
+    "@prisma/adapter-neon": "^6.0.0",
+    "@prisma/client": "^6.0.0",
     "@t3-oss/env-nextjs": "^0.11.1",
     "zod": "^3.23.8"
   },
@@ -32,7 +37,7 @@
     "dotenv-cli": "^7.4.4",
     "eslint": "latest",
     "prettier": "latest",
-    "prisma": "^5.22.0",
+    "prisma": "^6.0.0",
     "typescript": "latest"
   },
   "prettier": "@yuki/prettier-config"
