--- a/packages/ui/components.json
+++ b/packages/ui/components.json
@@ -5,7 +5,7 @@
   "tsx": true,
   "tailwind": {
     "config": "../../tooling/tailwind/web.ts",
-    "css": "styles/tailwind.css",
+    "css": "src/tailwind.css",
     "baseColor": "neutral",
     "cssVariables": true,
     "prefix": ""
@@ -13,9 +13,9 @@
   "aliases": {
     "components": "@yuki/ui",
     "utils": "@yuki/ui",
-    "ui": "@yuki/ui/ui",
+    "ui": "@yuki/ui",
     "lib": "@yuki/ui",
-    "hooks": "@yuki/ui/hooks"
+    "hooks": "@yuki/hooks"
   },
   "iconLibrary": "lucide"
 }
