--- a/turbo.json
+++ b/turbo.json
@@ -7,7 +7,7 @@
       "dependsOn": ["^db:generate", "^build"],
       "outputs": [".cache/tsbuildinfo.json", "dist/**"]
     },
-    "dev": { "cache": false, "persistent": false },
+    "dev": { "dependsOn": ["^dev"], "cache": false, "persistent": false },
     "format": { "outputs": [".cache/.prettiercache"], "outputLogs": "new-only" },
     "lint": { "dependsOn": ["^topo", "^build"], "outputs": [".cache/.eslintcache"] },
     "typecheck": { "dependsOn": ["^topo", "^build"], "outputs": [".cache/tsbuildinfo.json"] },
