feat(dashboard): add react router app

--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -9,7 +9,7 @@
       "react-server": "./src/index.rsc.ts",
       "default": "./src/index.ts"
     },
-    "./oauth": "./src/oauth.ts",
+    "./lucia": "./src/lucia.ts",
     "./env": "./env.ts"
   },
   "scripts": {
