--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -23,6 +23,7 @@
         "./src/hooks/*.tsx"
       ]
     },
+    "./fonts": "./src/fonts/index.ts",
     "./tailwind.css": "./src/tailwind.css"
   },
   "scripts": {
