--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,9 @@ apps/expo/.gitignore
 apps/expo/ios
 apps/expo/android
 
+# react-router
+.react-router
+
 # production
 build
 
@@ -38,8 +41,8 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # local env files
-.env
-.env*.local
+.env*
+!.env.example
 
 # vercel
 .vercel
@@ -47,6 +50,7 @@ yarn-error.log*
 # typescript
 dist/
 .cache
+*.tsbuildinfo
 
 # turbo
 .turbo
