--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -1,33 +1,39 @@
 {
-  "name": "@yuki/www",
-  "version": "0.1.0",
+  "name": "@yuki/dashboard",
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "bun with-env next build",
+    "build": "bun with-env react-router build",
     "clean": "git clean -xdf .cache .next .turbo node_modules",
-    "dev": "bun with-env next dev",
+    "dev": "bun with-env react-router dev -p 3001",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
-    "start": "bun with-env next start",
-    "typecheck": "tsc --noEmit",
+    "start": "bun with-env react-router-serve ./build/server/index.js -p 3001",
+    "typecheck": "react-router typegen && tsc --build --noEmit",
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
-    "@t3-oss/env-nextjs": "^0.11.1",
+    "@react-router/fs-routes": "^7.0.1",
+    "@react-router/node": "^7.0.1",
+    "@react-router/serve": "^7.0.1",
+    "@t3-oss/env-core": "^0.11.1",
     "@tanstack/react-query": "^5.62.0",
     "@trpc/client": "^11.0.0-rc.648",
     "@trpc/react-query": "^11.0.0-rc.648",
+    "@trpc/server": "^11.0.0-rc.648",
     "@yuki/api": "workspace:*",
     "@yuki/auth": "workspace:*",
+    "@yuki/db": "workspace:*",
     "@yuki/ui": "workspace:*",
-    "next": "14.2.18",
+    "isbot": "^5.1.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router": "^7.0.1",
     "superjson": "^2.2.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@react-router/dev": "^7.0.1",
     "@types/node": "^20.17.9",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
@@ -35,12 +41,15 @@
     "@yuki/prettier-config": "workspace:*",
     "@yuki/tailwind-config": "workspace:*",
     "@yuki/tsconfig": "workspace:*",
+    "autoprefixer": "^10.4.20",
     "dotenv-cli": "^7.4.4",
-    "eslint": "latest",
-    "jiti": "^2.4.1",
-    "prettier": "latest",
+    "eslint": "^9.16.0",
+    "postcss": "^8.4.49",
+    "prettier": "^3.4.1",
     "tailwindcss": "^3.4.15",
-    "typescript": "latest"
+    "typescript": "^5.7.2",
+    "vite": "^5.4.11",
+    "vite-tsconfig-paths": "^5.1.3"
   },
   "prettier": "@yuki/prettier-config"
 }
