--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -20,6 +20,7 @@
     "@trpc/react-query": "^11.0.0-rc.648",
     "@yuki/api": "workspace:*",
     "@yuki/auth": "workspace:*",
+    "@yuki/db": "workspace:*",
     "@yuki/ui": "workspace:*",
     "next": "14.2.18",
     "react": "^18.3.1",
