--- a/apps/react-router/package.json
+++ b/apps/react-router/package.json
@@ -1,40 +1,38 @@
 {
   "name": "@yuki/react-router",
-  "version": "0.1.0",
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "bun with-env react-router build && node vercel/prepare.js",
+    "build": "bun with-env react-router build",
     "clean": "git clean -xdf .cache .next .turbo node_modules",
-    "dev": "bun with-env cross-env NODE_ENV=development bun ./dev-server.js",
+    "dev": "bun with-env react-router dev -p 3001",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
+    "start": "bun with-env react-router-serve ./build/server/index.js -p 3001",
     "typecheck": "react-router typegen && tsc --build --noEmit",
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
-    "@react-router/express": "^7.0.1",
     "@react-router/fs-routes": "^7.0.1",
     "@react-router/node": "^7.0.1",
+    "@react-router/serve": "^7.0.1",
+    "@t3-oss/env-core": "^0.11.1",
     "@tanstack/react-query": "^5.62.0",
     "@trpc/client": "^11.0.0-rc.648",
     "@trpc/react-query": "^11.0.0-rc.648",
     "@trpc/server": "^11.0.0-rc.648",
-    "@vercel/node": "^3.2.27",
     "@yuki/api": "workspace:*",
     "@yuki/auth": "workspace:*",
     "@yuki/db": "workspace:*",
     "@yuki/ui": "workspace:*",
-    "dotenv-cli": "^7.4.4",
-    "express": "^4.21.1",
     "isbot": "^5.1.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router": "^7.0.1"
+    "react-router": "^7.0.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@react-router/dev": "^7.0.1",
-    "@types/express": "^5.0.0",
     "@types/node": "^20.17.9",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
@@ -43,12 +41,13 @@
     "@yuki/tailwind-config": "workspace:*",
     "@yuki/tsconfig": "workspace:*",
     "autoprefixer": "^10.4.20",
-    "cross-env": "^7.0.3",
+    "dotenv-cli": "^7.4.4",
+    "eslint": "^9.16.0",
     "postcss": "^8.4.49",
     "prettier": "^3.4.1",
     "tailwindcss": "^3.4.15",
     "typescript": "^5.7.2",
-    "vite": "^5.4.11",
+    "vite": "^6.0.2",
     "vite-tsconfig-paths": "^5.1.3"
   },
   "prettier": "@yuki/prettier-config"
