--- a/apps/react-router/turbo.json
+++ b/apps/react-router/turbo.json
@@ -4,7 +4,7 @@
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
-      "outputs": [".vercel/**"]
+      "outputs": ["build/**"]
     },
     "dev": {
       "persistent": true
