--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -2,7 +2,6 @@
   "name": "@yuki/nextjs",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "build": "bun with-env next build",
     "clean": "git clean -xdf .cache .next .turbo node_modules",
@@ -15,33 +14,30 @@
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.11.1",
-    "@tanstack/react-query": "^5.62.0",
-    "@trpc/client": "^11.0.0-rc.648",
-    "@trpc/react-query": "^11.0.0-rc.648",
+    "@tanstack/react-query": "^5.62.3",
+    "@trpc/client": "^11.0.0-rc.660",
+    "@trpc/react-query": "^11.0.0-rc.660",
+    "@trpc/server": "^11.0.0-rc.660",
     "@yuki/api": "workspace:*",
     "@yuki/auth": "workspace:*",
     "@yuki/db": "workspace:*",
     "@yuki/ui": "workspace:*",
-    "next": "14.2.18",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "superjson": "^2.2.1",
+    "dotenv-cli": "^7.4.4",
+    "next": "15.0.4",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.17.9",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "@yuki/eslint-config": "workspace:*",
     "@yuki/prettier-config": "workspace:*",
     "@yuki/tailwind-config": "workspace:*",
     "@yuki/tsconfig": "workspace:*",
-    "dotenv-cli": "^7.4.4",
-    "eslint": "latest",
-    "jiti": "^2.4.1",
-    "prettier": "latest",
+    "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
-    "typescript": "latest"
-  },
-  "prettier": "@yuki/prettier-config"
+    "typescript": "^5"
+  }
 }
