--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -5,7 +5,7 @@
     "jsx": "preserve",
     "rootDir": ".",
     "baseUrl": ".",
-    "paths": { "@yuki/*": ["src/*"] }
+    "paths": { "@yuki/ui/*": ["src/*"] }
   },
   "include": ["*.ts", "src"],
   "exclude": ["node_modules"]
