feat: add react router app

--- a/apps/react-router/package.json
+++ b/apps/react-router/package.json
@@ -1,35 +1,37 @@
 {
-  "name": "@yuki/nextjs",
-  "version": "0.1.0",
+  "name": "@yuki/react-router",
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "bun with-env next build",
+    "build": "bun with-env react-router build && node vercel/prepare.js",
     "clean": "git clean -xdf .cache .next .turbo node_modules",
-    "dev": "bun with-env next dev --turbopack",
+    "dev": "bun with-env cross-env NODE_ENV=development node ./dev-server.js",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
     "start": "bun with-env next start",
-    "typecheck": "tsc --noEmit",
+    "typecheck": "react-router typegen && tsc --noEmit",
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
-    "@t3-oss/env-nextjs": "^0.11.1",
-    "@tanstack/react-query": "^5.62.7",
-    "@trpc/client": "^11.0.0-rc.660",
-    "@trpc/react-query": "^11.0.0-rc.660",
-    "@trpc/server": "^11.0.0-rc.660",
+    "@react-router/express": "^7.0.2",
+    "@react-router/fs-routes": "^7.0.2",
+    "@react-router/node": "^7.0.2",
+    "@t3-oss/env-core": "^0.11.1",
+    "@vercel/node": "^3.2.29",
     "@yuki/api": "workspace:*",
     "@yuki/auth": "workspace:*",
     "@yuki/db": "workspace:*",
     "@yuki/ui": "workspace:*",
-    "dotenv-cli": "^7.4.4",
-    "next": "15.1.0",
+    "express": "^4.21.2",
+    "isbot": "^5.1.17",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router": "^7.0.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@react-router/dev": "^7.0.2",
+    "@types/express": "^5.0.0",
     "@types/node": "^22.10.2",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.2",
@@ -37,9 +39,15 @@
     "@yuki/prettier-config": "workspace:*",
     "@yuki/tailwind-config": "workspace:*",
     "@yuki/tsconfig": "workspace:*",
+    "autoprefixer": "^10.4.20",
+    "cross-env": "^7.0.3",
+    "eslint": "^9.16.0",
     "postcss": "^8.4.49",
+    "prettier": "^3.4.2",
     "tailwindcss": "^3.4.16",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "vite": "^6.0.3",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "prettier": "@yuki/prettier-config"
 }
