fix(ci): run db:generate error

--- a/turbo.json
+++ b/turbo.json
@@ -24,7 +24,7 @@
     "//#clean": { "cache": false },
     "push": { "cache": false, "interactive": true },
     "studio": { "cache": false, "persistent": true },
-    "gnr": { "cache": false, "interactive": true },
+    "gnr": { "cache": false, "interactive": false },
     "ui-add": { "cache": false, "interactive": true }
   },
   "globalEnv": [
