--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,7 +16,7 @@
   "prettier": "@yuki/prettier-config",
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.11.1",
-    "@tanstack/react-query": "^5.63.0",
+    "@tanstack/react-query": "^5.64.0",
     "@trpc/client": "^11.0.0-rc.694",
     "@trpc/react-query": "^11.0.0-rc.694",
     "@trpc/server": "^11.0.0-rc.694",
@@ -25,6 +25,7 @@
     "@yuki/db": "workspace:*",
     "@yuki/ui": "workspace:*",
     "next": "15.1.4",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "superjson": "^2.2.2",
@@ -32,7 +33,7 @@
   },
   "devDependencies": {
     "@types/node": "^22",
-    "@types/react": "^19.0.4",
+    "@types/react": "^19.0.5",
     "@types/react-dom": "^19",
     "@yuki/eslint-config": "workspace:*",
     "@yuki/prettier-config": "workspace:*",
