--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "type": "module",
   "exports": {
+    "./utils": "./src/utils.ts",
     "./*": "./src/components/*.tsx",
     "./hooks/*": "./src/hooks/*.ts",
     "./tailwind.css": "./src/tailwind.css"
@@ -22,10 +23,10 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.4",
-    "@yuki/lib": "workspace:*",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.471.1",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "tailwind-merge": "^2.6.0"
   },
