--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@yuki/tsconfig/react-library.json",
   "compilerOptions": {
+    "rootDir": ".",
     "baseUrl": ".",
     "paths": { "@yuki/ui/*": ["./src/*"] }
   },
