--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "rootDir": ".",
     "baseUrl": ".",
-    "paths": { "@yuki/ui/*": ["./src/*"] }
+    "paths": { "@yuki/*": ["./src/*"] }
   },
   "include": ["src"],
   "exclude": ["node_modules"]
